# EntropicFlux

firmware/: .clang-format  Blink.cpp  Blink.txt  Button.h  CMakeLists.txt  Makefile  ShiftRegister.h  test_pa  test_pa.c
firmware/effects/: adsr.h  allpass.txt  biquad.h  comb copy.txt  comb.h  comb.txt  comb_delay_interp.txt  diffuser.h  effects.h  fdn.h  fdn.txt  follower.h  harmonizer.h  harmony.h  phasor.h
firmware/platform/: circular_buffer.h  memory.h  message.h
firmware/src/: main.txt
firmware/src/app/: DelayTimeController.h  IApplication.h  TapTempo.h
firmware/src/dsp/: Vibrato.h  allpass.h  arpeggio.h  biquad.h  delay.h  delay_line.h  fdn.h  granulator.h  noise.h  oscillator.h  pitch_shift.h  reverb.h  reverb_model.h  saturation.h  schroeder.h  softclip.h
firmware/src/hardware/: Button.h  Potentiometer.h  ShiftRegister.h
firmware/src/platform/: DesktopPlatform.h  IPlatform.h
firmware/src/utils/: CircularBuffer.h  fast_trig.h  util.h
firmware/tests/daisy/: test_memory.h
firmware/util/: Delay.h  DelayTimeController.h  Potentiometer.h  TapTempo.h
hardware/: 125b.kicad_mod  Hammond_1590BB.kicad_mod  OD1.kicad_pcb  OD1.kicad_prl  OD1.kicad_pro  OD1.kicad_sch  STOMP-SWITCH-3PDT.kicad_mod  fp-info-cache
hardware/Fabrication/: OD1-B_Cu.gbr  OD1-B_Mask.gbr  OD1-B_Paste.gbr  OD1-B_Silkscreen.gbr  OD1-Edge_Cuts.gbr  OD1-F_Cu.gbr  OD1-F_Mask.gbr  OD1-F_Paste.gbr  OD1-F_Silkscreen.gbr  OD1-NPTH.drl  OD1-PTH.drl  OD1-job.gbrjob  OD1.csv
hardware/Graphics/: Source file.ai
simulator/: build_pa.sh  test_pa copy.c
